@@ -67,6 +67,7 @@ void gap_stop (GAPPlayer *gp);
 void gap_close (GAPPlayer *gp);
 
 void gap_get_metadata (GAPPlayer *gp, char **artist, char **title, long *duration);
+void gap_get_metadata_uri (const char *uri, char **artist, char **title, long *duration);
 
 long gap_get_time (GAPPlayer *gp);
 void gap_set_time (GAPPlayer *gp, long time);
